# game_engine

./: .gitignore  CMakeLists.txt  compile_shaders.bat  imgui.ini
plugins/core/: CMakeLists.txt
plugins/core/src/private/concurrency/: task_graph.cpp  thread_affinity.cpp
plugins/core/src/private/ecs/: app.cpp  archetype.cpp  world.cpp
plugins/core/src/public/: assert.hpp  asset_manager.hpp  bitmask.hpp  bitref.hpp  concepts.hpp  core_include.hpp  default_components.hpp  defines.hpp  linalg.hpp  math.hpp  memory.hpp  optional.hpp  rtti.hpp  serialization.hpp  static_bitmask.hpp  static_reflection.hpp  traits.hpp  types.hpp  utils.hpp
plugins/core/src/public/concurrency/: task_graph.hpp  thread_affinity.hpp  thread_safe_types.hpp  threading.hpp
plugins/core/src/public/ecs/: app.hpp  archetype.hpp  component.hpp  defaults.hpp  entity.hpp  entity_list.hpp  ids.hpp  query.hpp  registered_types.hpp  scheduler.hpp  scheduling.hpp  system.hpp  system_base.hpp  system_context.hpp  type_registry.hpp  world.hpp
plugins/core/src/public/threading/: task.hpp  thread_safe_types.hpp
plugins/default_plugins/: CMakeLists.txt
plugins/default_plugins/src/private/: default_plugins.cpp
plugins/default_plugins/src/public/: default_plugins.hpp
plugins/gameplay_framework/: CMakeLists.txt
plugins/gameplay_framework/src/private/: game_loop.hpp  gameplay_framework.cpp
plugins/gameplay_framework/src/public/: gameplay_framework.hpp
plugins/renderer/: CMakeLists.txt
plugins/renderer/src/private/: draw.cpp  draw.hpp  init.cpp  init.hpp  renderer_plugin.cpp  resources.hpp  vk_utils.cpp  vk_utils.hpp  vk_verify.hpp  vma_impl.cpp
plugins/renderer/src/public/: renderer_plugin.hpp  renderer_types.hpp
plugins/vulkan_renderer/: CMakeLists.txt
plugins/vulkan_renderer/src/private/: pipeline_builder.hpp  vk_engine.hpp  vk_loader.cpp  vk_loader.hpp  vk_plugin.cpp  vk_types.hpp  vk_verify.hpp
plugins/vulkan_renderer/src/public/: vk_plugin.hpp
shaders/: colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  gradient.comp  gradient_color.comp  input_structures.glsl  mesh.frag  mesh.vert  sky.comp  tex_image.frag
shaders/compiled/: colored_triangle_mesh.vert.spv  gradient_color.spv  mesh.frag.spv  mesh.vert.spv  tex_image.frag.spv
src/private/: main.cpp
